Fix various small bugs: fix students assessed count and pluralization, switch first name and last name boxes, fix student name changing scenario, move rubric so it is visible

--- a/src/app/assessment/assess-students/assess-students.component.sass
+++ b/src/app/assessment/assess-students/assess-students.component.sass
@@ -73,7 +73,8 @@ aside
             position: absolute
             top: 50%
             transform: translateY(-50%)
-            left: 596px
+            right: 0
+            z-index: 1
             border: 1px solid $c-button
             font-family: $f
             display: none
